--- a/sass/header/vtex.store-drawer.scss
+++ b/sass/header/vtex.store-drawer.scss
@@ -1,13 +1,25 @@
 .openIconContainer {
+  display: flex;
+  align-items: center;
+  height: 41px;
+  width: 54px;
+  justify-content: center;
+  &::before {
+    content: "";
+    width: 35px;
+    height: 38px;
+    display: inline-block;
+    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h40v40H0z'/%3E%3Cg stroke='%236B4DC4' stroke-linecap='round'%3E%3Cpath d='M9 11.33548229h22M9 28.1590117h22M9 19.747247l21.9999998.00269223'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  }
+  &::after {
+    content: "|";
+    font-size: 20px;
+    height: 41px;
+    padding-left: 2px;
+    margin-right: -10px;
+  }  
   .menuIcon {
-    width: 16px;
-    overflow: visible;
-
-    &::after {
-      content: "|";
-      font-size: 20px;
-      height: 30px;
-    }  
+    display: none;
   }
 }
 
