--- a/sass/vtex.login.scss
+++ b/sass/vtex.login.scss
@@ -1,5 +1,5 @@
 .content {
-    margin-top: 130px;
+    margin-top: 10px;
     justify-content: center;
     max-width: 1440px;
     width: auto;
@@ -342,4 +342,8 @@
             text-align: center !important;
         }
     }
+}
+
+.arrowUp {
+    margin-right: 1.5rem;
 }
