--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -6,36 +6,27 @@
   }
   .minicartContainer {
     .openIconContainer {
+      &::before {
+        content: "";
+        width: 30px;
+        height: 30px;
+        display: inline-block;
+        align-items: center;
+        background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform='translate(.578655 1.089016)' stroke='%23332C32' fill='none' fill-rule='evenodd'%3E%3Cellipse cx='16.3514116' cy='16.8317553' rx='1.49148263' ry='1.4906299'/%3E%3Cellipse cx='8.38548112' cy='16.8317553' rx='1.49148263' ry='1.4906299'/%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19.017421 13.6857263H6.08535794L2.79276883 0H0'/%3E%3Cpath stroke-linejoin='round' d='m3.48119653 2.4239903 1.87846194 7.9382178H19.017421l1.8040951-7.9382178z'/%3E%3C/g%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-size: 30px 30px;
+      }
       .minicartIconContainer {
         display: flex;
         align-items: center;
+        width: 0;
         .cartIcon {
-          bottom: 20%;
-          overflow: visible;
-          position: absolute;
+          display: none;
+          visibility: none;
         }
 
         .minicartQuantityBadge {
-          top: 0;
-          right: 0;
-          width: 25px;
-          display: flex;
-          font-size: 12px;
-          font-weight: 600;
-          margin-left: 12px;
-          line-height: 1rem;
-          padding: 4px 12px;
-          position: relative;
-          background-color: #e30613;
-          &::after {
-            width: 6px;
-            height: 8px;
-            content: '';
-            margin-left: 10px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-image: url('assets/icons/arrow.svg');
-          }
+          display: none;
         }
       }
 
@@ -66,7 +57,7 @@
       &::before {
         text-transform: none;
         font-size: 16px;
-        color: #ffffff;
+        color: #fff;
         content: 'Ir para o checkout';
       }
     }
