--- a/sass/home/vtex.store-link.scss
+++ b/sass/home/vtex.store-link.scss
@@ -50,22 +50,21 @@
   &--categories-showcase-cta {
     position: absolute;
     width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    padding: 32px;
     border: 2px solid transparent;
     border-radius: 16px;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: none;
     text-align: center;
-    line-height: 32px;
-    color: #111;
+    line-height: 21px;
+    color: #332c32;
     transition: border-color 0.3s ease, color 0.3s ease;
+    margin-top: 20px;
 
     &:hover {
       color: #e30613;
