Estilizando, alinhando, importando arrow up e down do disclosure, tanto no mobile como no desktop

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -59,3 +59,4 @@ $card-default: 4px 0 2px rgba(0, 0, 0, 0.04);
 $primary-gold: #E3C963;
 $primary-text-dark: #1D1E2C;
 $background-blue-black: #232946;
+$background-categorie-hover: #E0E9F3;
