--- a/sass/footer/vtex.menu.scss
+++ b/sass/footer/vtex.menu.scss
@@ -21,4 +21,16 @@
       }
     }
   }
+
+  &--upperFooterMenu {
+    margin: 0;
+  }
+}
+
+.styledLinkContent {
+  &--upperFooterMenu {
+    color: #332c32;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
