feat(home-upper-footer): added brands section

--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -95,7 +95,8 @@
     margin-right: 12px;
   }
 
-  &--upperFooterCategoriesMainTitle {
+  &--upperFooterCategoriesMainTitle,
+  &--upperFooterBrandsMainTitle {
     height: 33px;
     color: #332c32;
     font-size: 28px;
