feat(home): added services and blog sections

--- a/sass/footer/vtex.slider-layout.scss
+++ b/sass/footer/vtex.slider-layout.scss
@@ -49,6 +49,7 @@
       &--upperFooterBrands,
       &--upperFooterCategories {
         height: 16px;
+        color: #4320a8;
       }
     }
   }
