--- a/sass/footer/vtex.store-components.scss
+++ b/sass/footer/vtex.store-components.scss
@@ -3,5 +3,10 @@
     border: 1px solid #f2f2f2;
     border-radius: 0.25rem;
     box-shadow: 1px 3px 4px 0 rgba(0, 0, 0, 0.05);
+
+    &:hover {
+      opacity: 0.9;
+      transition: ease-in-out 0.2s;
+    }
   }
 }
