--- a/sass/header/vtex.store-components.scss
+++ b/sass/header/vtex.store-components.scss
@@ -18,6 +18,7 @@
       color: #555;
       font-weight: 400;
       line-height: 24px;
+      width: 400px;
       border-radius: 1px;
       @media screen and (max-width: 768px) {
         padding: 0;
