--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -69,6 +69,15 @@
       text-align: center;
       margin: 1rem 0 0.75rem;
     }
+
+    &--home-blog-subtitle {
+      height: 3rem;
+      color: #332c32;
+      font-size: 18px;
+      line-height: 1.5rem;
+      max-width: 25rem;
+      margin: 2rem 0;
+    }
   }
 
   .wrapper {
