--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -78,6 +78,25 @@
       max-width: 25rem;
       margin: 2rem 0;
     }
+
+    &--home-blog-title {
+      margin: 0 0 1.25rem 0.5rem;
+      height: 1.5rem;
+      color: #232946;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 1.5rem;
+    }
+
+    &--home-blog-text {
+      color: #232946;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 22px;
+      max-width: 12.5rem;
+      width: 100%;
+      margin: 0.75rem 0 0;
+    }
   }
 
   .wrapper {
