Estrutura inicial do footer realizada, importando assets para o footer e iniciando alinhamento e estilização dos itens

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -60,3 +60,6 @@ $primary-gold: #E3C963;
 $primary-text-dark: #1D1E2C;
 $background-blue-black: #232946;
 $background-categorie-hover: #E0E9F3;
+$background-footer: #292F33;
+$blue-active: #291660;
+$blue-hover: #0B1658;
