--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -6,6 +6,18 @@
   margin: 0;
 }
 
+.galleryTitle--layout {
+  font-size: 28px;
+  line-height: 33px;
+  color: #332C32;
+  margin: 20px 0 10px;
+  @media screen and (max-width: 768px) {
+    font-size: 24px;
+    line-height: 28px;
+    margin: 24px 0 20px;
+  }
+}
+
 .galleryItem {
   padding: 0;
   margin: 0;
@@ -409,7 +421,7 @@
           }
 
           :global(.vtex-checkbox__inner-container) {
-            border: 2px solid #DDDDDD;
+            border: 2px solid #DDD;
             border-radius: 6px;
             height: 24px;
             width: 24px;
