--- a/sass/vtex.store-components.scss
+++ b/sass/vtex.store-components.scss
@@ -3,3 +3,11 @@
     max-width: 100%;
     padding: 0;
 }
+
+.imageElement--banner-sponsored {
+    width: 100%;
+    height: 200px;
+    @include mobile {
+        width: 20px;
+    }
+}
